# Hermes-configurable-web-server

./: CMakeLists.txt  README.md  hermes.json  test_server.ps1
include/Hermes/: Config.h  HttpServer.h  IRequestHandler.h  IServer.h  Logger.h  ProxyServer.h  Router.h  StaticFileHandler.h  TcpProxy.h
include/Hermes/Test/: TestFramework.h
src/: ConfigLoader.cpp  HttpServer.cpp  ProxyServer.cpp  Router.cpp  StaticFileHandler.cpp  TcpProxy.cpp  main.cpp
src/tests/: RouterTest.cpp
static/: style.css
